--- a/MvcLearning.Business/MvcLearning.Business.csproj
+++ b/MvcLearning.Business/MvcLearning.Business.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MvcLearning.Data\MvcLearning.Data.csproj" />
+  </ItemGroup>
+
 </Project>
