--- a/MvcLearning.Business/MvcLearning.Business.csproj
+++ b/MvcLearning.Business/MvcLearning.Business.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MvcLearning.Data\MvcLearning.Data.csproj" />
   </ItemGroup>
 
